Update deps to fork

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "jscpd": "^4.0.0"
     },
     "dependencies": {
-        "@hckrnews/converter": "^0.6.0"
+        "@hckrnews/converter": "github:crackedpotato007/converter"
     },
     "engines": {
         "node": ">= 20"
